2020xxxx		6.X.X
	- Increase limit of READ/WRITE BUFFER command for improved compatibility
	SGI Iris hosts

20200419		6.3.1
	- Added checks to ensure the correct firmware version is loaded.
	V6 Rev.f and older boards need the "firmware.V6.revF.dfu" firmware updates.
	V6 2020c and newer boards need the "firmware.V6.2020.dfu" firmware updates.

20200216		6.3.0
	- Breaking change: Firmware updates on windows now require the UsbDK
	driver to be installed.

	- Fix regression preventing some machines from booting
	- Update libusb to 1.0.23 for dfu-util
	- Modify dfu-util to use the UsbDk driver via libusb.

20200130		6.2.15
	- Fix issue writing more than 512kb of data in one write command
	(bug introduced 6.2.7)
	- Fix possible data corruption bug when reading or writing more than
	64kb per command (fixed in most cases by 6.2.14)

20200101		6.2.14
	- Fix for invalid CDROM READ TOC responses (Thanks Simon Gander)
	- Fix for data corruption for hosts that transfer more than 64k per
	write.

20191208		6.2.9
	- Fix to prevent sending floppy geometry mode page when not configured as
	a floppy (Thanks Landon Rodgers)
	- Fix for VMS 5.5-2 Inquiry allocation lengths. Requires setting "vms" quirk
	mode in the XML config (Thanks Landon Rodgers)

20191030		6.2.8
	- Fix incorrect results from the self-test function.

20191009		6.2.7
	- Slight improvements to data throughput, which may assist SCSI hosts with
	short timeouts.

20190529		6.2.5
	- Add scsi mode page 0 support
	- Fix SD card hotswap bug when the SCSI host is constantly polling

20190502		6.2.4 (Beta)
	- Port XEBEC support from v5 firmware
	- Add Flexible Disk Drive Geometry SCSI MODE page
	- Stability improvements
	- Fix regression from 6.1.3 firmware for Kurzweil K2000

20181011		6.2.1
	- Fix bug in USB disk interface with disks over 4GB

20180926        6.2.0
	- Fix bug with non-512 byte sectors.
	- Fix bug when writing with multiple SCSI devices on the chain
	- Performance improvements to write speeds.

20180430		6.1.4